crates/nash-parse/src/expression/snapshots/nash_parse__expression__list__tests__error_tab.snap
---
source: crates/nash-parse/src/expression/list.rs
description: "Code:\n\n[1,\t2]"
---
List(
    Space(
        HasTab,
        1,
        4,
    ),
    1,
    1,
)
