crates/nash-parse/src/expression/snapshots/nash_parse__expression__list__tests__error_trailing_comma.snap
---
source: crates/nash-parse/src/expression/list.rs
description: "Code:\n\n[1, 2,]"
---
List(
    Expr(
        Start(
            1,
            7,
        ),
        1,
        7,
    ),
    1,
    1,
)
