crates/nash-parse/src/expression/snapshots/nash_parse__expression__list__tests__error_unclosed.snap
---
source: crates/nash-parse/src/expression/list.rs
description: "Code:\n\n[1, 2"
---
List(
    End(
        1,
        6,
    ),
    1,
    1,
)
