crates/nash-parse/src/expression/snapshots/nash_parse__expression__list__tests__mixed_types.snap
---
source: crates/nash-parse/src/expression/list.rs
description: "Code:\n\n[foo, \"bar\", 42]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 17,
        },
    },
    value: List(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 2,
                    },
                    end: Position {
                        line: 1,
                        column: 5,
                    },
                },
                value: Var {
                    kind: LowVar,
                    name: "foo",
                },
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 12,
                    },
                },
                value: Str(
                    "bar",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 14,
                    },
                    end: Position {
                        line: 1,
                        column: 16,
                    },
                },
                value: Int(
                    42,
                ),
            },
        ],
    ),
}
