crates/nash-parse/src/expression/snapshots/nash_parse__expression__list__tests__multiline.snap
---
source: crates/nash-parse/src/expression/list.rs
description: "Code:\n\n[\n    1,\n    2,\n    3\n]"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 5,
            column: 2,
        },
    },
    value: List(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 5,
                    },
                    end: Position {
                        line: 2,
                        column: 6,
                    },
                },
                value: Int(
                    1,
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 5,
                    },
                    end: Position {
                        line: 3,
                        column: 6,
                    },
                },
                value: Int(
                    2,
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 4,
                        column: 5,
                    },
                    end: Position {
                        line: 4,
                        column: 6,
                    },
                },
                value: Int(
                    3,
                ),
            },
        ],
    ),
}
